--- a/css/grid-layout.css
+++ b/css/grid-layout.css
@@ -55,7 +55,7 @@ body {
 
 .footer {
     /* background-color: #6C52D9; */
-    background-image: linear-gradient(160deg, #f58d16 0%, #9B8AE6 127%);
+    background-image: linear-gradient(160deg, #f58d16 0%, #6c52d9 127%);
 }
 
 .footer>p {
