--- a/css/other.css
+++ b/css/other.css
@@ -14,10 +14,38 @@
     padding-bottom: 10px;
 }
 
+/* width */
+.other-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+
+
+/* Track */
+.other-container::-webkit-scrollbar-track {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: transparent;
+    border-radius: 10px;
+
+}
+
+/* Handle */
+.other-container::-webkit-scrollbar-thumb {
+    height: 10px;
+    border-radius: 10px;
+    background: rgba(228, 137, 0);
+}
+
+/* Handle on hover */
+.other-container::-webkit-scrollbar-thumb:hover {
+    background: rgba(228, 137, 0, 0.794);
+}
+
 .other-title {
     background-color: transparent;
     margin-bottom: 10px;
-    color: rgb(228, 137, 0);
+    color: rgb(228, 137, 0, 0.794);
 }
 
 .info-button-container {
@@ -27,9 +55,11 @@
 }
 
 .current-button {
-    height: 32px;
+    height: fit-content;
     width: max-content;
-    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 15px;
     font-size: large;
     font-weight: bolder;
     background-color: rgba(228, 137, 0);
@@ -54,22 +84,14 @@
     background-color: transparent;
     color: rgba(169, 169, 169, 0.509);
     text-align: start;
+    font-size: larger;
 }
 
-.other-xp-title {
-    background-color: transparent;
-    color: rgba(228, 137, 0);
-    text-align: center;
-}
-
-.other-grade-title {
-    background-color: transparent;
-    color: rgba(228, 137, 0);
-    text-align: center;
-}
-
+.other-xp-title,
+.other-grade-title,
 .other-level-title {
     background-color: transparent;
     color: rgba(228, 137, 0);
     text-align: center;
+    font-size: x-large;
 }
