--- a/css/projects.css
+++ b/css/projects.css
@@ -6,19 +6,20 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     border-radius: 50px;
     border: 6px solid #171717;
+    display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
 }
 
 .projects-container>.project-title {
     background-color: transparent;
-    margin-bottom: 10px;
     color: rgb(228, 137, 0);
 }
 
 .projects-container>.project-names {
+    min-height: 85%;
     max-height: 90%;
-    width: 100%;
+    width: 90%;
     overflow-y: scroll;
     background-color: transparent;
     margin-bottom: 10px;
@@ -26,6 +27,7 @@
     font-weight: bold;
     display: flex;
     flex-direction: column;
+    /* align-self: center; */
 }
 
 .projects-container>.project-names::-webkit-scrollbar {
@@ -36,6 +38,7 @@
     background-color: rgb(12, 12, 12);
     height: max-content;
     margin: 3px 0px 0px 3px;
+    border-radius: 25px;
 }
 
 .project-buttons>h2 {
@@ -70,7 +73,7 @@
 .project-buttons>.project-skills-info {
     background-color: transparent;
     display: flex;
-    max-width: 90%;
+    max-width: 100%;
     overflow-x: scroll;
     margin: 10px 0px 0px 0px;
 }
