--- a/css/projects.css
+++ b/css/projects.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 95%;
 }
 
 .projects-container>.project-title {
@@ -27,7 +28,6 @@
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    /* align-self: center; */
 }
 
 .projects-container>.project-names::-webkit-scrollbar {
