--- a/css/skills.css
+++ b/css/skills.css
@@ -10,6 +10,7 @@
     text-align: center;
     color: orange;
     display: flex;
+    height: 90%;
 }
 
 .skills-title {
@@ -57,6 +58,7 @@
 .svg-pie-chart-color>p {
     margin-right: 15px;
     min-width: max-content;
+    background-color: transparent;
 }
 
 .svg-pie-chart-color::-webkit-scrollbar {
